--- a/index.html
+++ b/index.html
@@ -1,98 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Connect MetaMask</title>
   <style>
     body {
-      background: #f5f7fa;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #f0f0f0, #e2e8f0);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
       margin: 0;
+      padding: 20px;
     }
 
-    .container {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      text-align: center;
-      max-width: 400px;
-    }
-
-    h1 {
-      color: #333;
-      margin-bottom: 1rem;
+    h2 {
+      color: #2d3748;
+      margin-bottom: 20px;
     }
 
     button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      color: white;
       background-color: #f6851b;
+      color: white;
+      font-size: 18px;
+      padding: 12px 24px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
       background-color: #e2761b;
     }
 
-    #status {
+    p#status {
       margin-top: 20px;
-      font-weight: 500;
-      color: #555;
-    }
-
-    #walletAddress {
-      font-family: monospace;
-      font-size: 0.9rem;
-      color: #1a73e8;
-      margin-top: 10px;
-      word-break: break-all;
+      font-size: 16px;
+      color: #2d3748;
+      text-align: center;
+      word-break: break-word;
     }
   </style>
-</head>
-<body>
-
-  <div class="container">
-    <h1>Connect to MetaMask</h1>
-    <button onclick="connectWallet()">Connect Wallet</button>
-    <div id="status"></div>
-    <div id="walletAddress"></div>
-  </div>
 
   <script>
     async function connectWallet() {
-      const status = document.getElementById("status");
-      const walletAddress = document.getElementById("walletAddress");
+      if (window.ethereum) {
+        try {
+          const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+          const walletAddress = accounts[0];
 
-      if (typeof window.ethereum === 'undefined') {
-        status.innerText = "MetaMask not detected. Please install it from metamask.io";
-        return;
-      }
+          // Send wallet address back to FlutterFlow
+          window.ReactNativeWebView?.postMessage(walletAddress); // Mobile
+          window.parent.postMessage(walletAddress, "*");          // Web fallback
 
-      try {
-        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        const account = accounts[0];
-        status.innerText = "✅ Connected successfully!";
-        walletAddress.innerText = `Wallet Address:\n${account}`;
-      } catch (error) {
-        if (error.code === 4001) {
-          status.innerText = "❌ Connection rejected by user.";
-        } else {
-          status.innerText = `❌ Error: ${error.message}`;
+          document.getElementById("status").innerText = "Connected: " + walletAddress;
+        } catch (error) {
+          document.getElementById("status").innerText = "Error: " + error.message;
         }
+      } else {
+        document.getElementById("status").innerText = "MetaMask not installed.";
       }
     }
   </script>
-
+</head>
+<body>
+  <h2>Connect to MetaMask</h2>
+  <button onclick="connectWallet()">Connect Wallet</button>
+  <p id="status"></p>
 </body>
 </html>
