--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Connect MetaMask Wallet</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Connect MetaMask</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      text-align: center;
-      background: #f7f7f7;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f2f2f2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
     h2 {
@@ -18,13 +21,14 @@
     }
 
     button {
-      padding: 12px 24px;
+      padding: 12px 20px;
       font-size: 16px;
       background-color: #f6851b;
-      border: none;
       color: white;
-      border-radius: 8px;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
+      margin-top: 10px;
     }
 
     button:hover {
@@ -32,10 +36,15 @@
     }
 
     #status {
-      margin-top: 20px;
-      font-weight: bold;
+      margin-top: 15px;
+      color: #555;
     }
   </style>
+</head>
+<body>
+  <h2>Connect to MetaMask</h2>
+  <button onclick="connectWallet()">Connect Wallet</button>
+  <p id="status"></p>
 
   <script>
     async function connectWallet() {
@@ -45,22 +54,15 @@
           const walletAddress = accounts[0];
           document.getElementById("status").innerText = "Connected: " + walletAddress;
 
-          // Send the wallet address to Flutter using the WalletChannel
-          if (window.WalletChannel && window.WalletChannel.postMessage) {
-            WalletChannel.postMessage(walletAddress);
-          }
+          // ✅ Redirect to your FlutterFlow app with wallet address as URL param
+          window.location.href = `https://realestate-1cooq0.flutterflow.app/?walletAddress=${walletAddress}`;
         } catch (error) {
           document.getElementById("status").innerText = "Error: " + error.message;
         }
       } else {
-        document.getElementById("status").innerText = "MetaMask not installed. Visit https://metamask.io";
+        document.getElementById("status").innerText = "MetaMask not detected. Please install it from https://metamask.io";
       }
     }
   </script>
-</head>
-<body>
-  <h2>Connect Your Wallet</h2>
-  <button onclick="connectWallet()">Connect Wallet</button>
-  <p id="status"></p>
 </body>
 </html>
